# TrustDelivery-Merchant

./: .gitignore  README.md  project.md
backend/: .env  .gitignore  Cargo.toml
backend/src/: config.rs  main.rs
backend/src/db/: migrations.rs  mod.rs
backend/src/handlers/: address_handler.rs  auth_handler.rs  delivery_handler.rs  merchant_handler.rs  mod.rs  routes.rs
backend/src/middleware/: auth.rs
backend/src/models/: address.rs  delivery.rs  merchant.rs  mod.rs  payment.rs
backend/src/services/: address_service.rs  auth_service.rs  delivery_service.rs  merchant_service.rs  mod.rs  pricing_service.rs
backend/src/utils/: mod.rs  response.rs
frontend/: .gitignore  package-lock.json  package.json  tailwind.config.js
frontend/public/: index.html  manifest.json
frontend/src/: App.tsx  index.css
frontend/src/components/: Layout.tsx  ProtectedRoute.tsx  PublicRoute.tsx
frontend/src/contexts/: AuthContext.tsx
frontend/src/data/: mockData.ts
frontend/src/pages/: CreateDelivery.tsx  CustomersPage.tsx  Dashboard.tsx  Deliveries.tsx  DeliveryDetails.tsx  LoginPage.tsx  NotificationsPage.tsx  PendingApprovalPage.tsx  ProfilePage.tsx  RegisterPage.tsx  SavedAddressesPage.tsx  TrackingPage.tsx  WelcomePage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
supabase/: schema.sql
